# stable-branch

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  CREDITS.md  DESIGN.md  QUESTIONS.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
docs/: index.html
docs/superpowers/specs/: 2026-06-11-github-pages-site-design.md
frontend/: app.js  index.html  style.css
src/stable_branch/: __main__.py  git_ops.py  matcher.py  models.py  server.py  watcher.py
tests/: conftest.py  test_git_ops.py  test_matcher.py  test_server.py
tests/e2e/: _page.py  conftest.py  test_filters.py  test_ui.py
