[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stable-branch"
version = "0.1.0"
description = "Browser tool for viewing and managing git history across multiple stable branches"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "watchdog>=4.0",
]

[project.scripts]
stable-branch = "stable_branch.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "playwright",
    "pytest-playwright",
    "anyio[trio]>=4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
stable_branch = ["../../../frontend/**"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
